fix: refactor + fix tests
