# docs/swagger.json
@@ -12,29 +12,6 @@
     },
     "host": "https://api.liteseed.xyz",
     "paths": {
-        "/": {
-            "get": {
-                "description": "Get the current status of the server",
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "Server"
-                ],
-                "summary": "Get status of the server",
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "$ref": "#/definitions/server.StatusResponse"
-                        }
-                    }
-                }
-            }
-        },
         "/price/{bytes}": {
             "get": {
                 "description": "Get the current price of data upload using the Liteseed Network.\nIt returns the price of upload in wei and the address to pay.",
@@ -177,24 +154,15 @@
                         "schema": {
                             "$ref": "#/definitions/server.HTTPError"
                         }
-                    },
-                    "500": {
-                        "description": "Internal Server Error",
-                        "schema": {
-                            "$ref": "#/definitions/server.HTTPError"
-                        }
                     }
                 }
             }
         },
         "/tx/{id}/data": {
             "get": {
-                "description": "get only the data of a posted data-item",
+                "description": "Get only the data of a posted data-item. It tries to automatically detect mime-type.\nYou can specify the response mime-type by either sending an mime-type query parameter or an accept header in the request.\nSupported mime-type are listed here - https://github.com/gabriel-vasile/mimetype/blob/master/supported_mimes.md.\nIf all else fails defaults to `application/octet-stream`",
                 "consumes": [
                     "application/json"
-                ],
-                "produces": [
-                    "application/octet-stream"
                 ],
                 "tags": [
                     "Upload"
@@ -203,10 +171,16 @@
                 "parameters": [
                     {
                         "type": "string",
-                        "description": "ID of the Data-Item",
+                        "description": "ID of the data-Item",
                         "name": "id",
                         "in": "path",
                         "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "Mime type of the response",
+                        "name": "mime-type",
+                        "in": "query"
                     }
                 ],
                 "responses": {
@@ -303,15 +277,15 @@
                 "parameters": [
                     {
                         "type": "string",
-                        "description": "Data-Item id",
+                        "description": "data-item id",
                         "name": "id",
                         "in": "path",
                         "required": true
                     },
                     {
                         "type": "string",
-                        "description": "Payment id",
-                        "name": "payment_id",
+                        "description": "payment id",
+                        "name": "paymentId",
                         "in": "path",
                         "required": true
                     }
@@ -331,18 +305,6 @@
                     },
                     "404": {
                         "description": "Not Found",
-                        "schema": {
-                            "$ref": "#/definitions/server.HTTPError"
-                        }
-                    },
-                    "424": {
-                        "description": "Failed Dependency",
-                        "schema": {
-                            "$ref": "#/definitions/server.HTTPError"
-                        }
-                    },
-                    "500": {
-                        "description": "Internal Server Error",
                         "schema": {
                             "$ref": "#/definitions/server.HTTPError"
                         }
@@ -387,7 +349,7 @@
                 "id": {
                     "type": "string"
                 },
-                "payment_id": {
+                "paymentId": {
                     "type": "string"
                 }
             }
@@ -417,21 +379,6 @@
                     "type": "string",
                     "format": "string",
                     "example": "1000000000000"
-                }
-            }
-        },
-        "server.StatusResponse": {
-            "type": "object",
-            "properties": {
-                "name": {
-                    "type": "string",
-                    "format": "string",
-                    "example": "transit"
-                },
-                "version": {
-                    "type": "string",
-                    "format": "string",
-                    "example": "v0.0.1"
                 }
             }
         }
