# internal/server/data_item_data_get.go
@@ -1,9 +1,9 @@
 package server
 
 import (
-	"log"
 	"net/http"
 
+	"github.com/gabriel-vasile/mimetype"
 	"github.com/gin-gonic/gin"
 	"github.com/liteseed/goar/crypto"
 	"github.com/liteseed/goar/transaction/data_item"
@@ -11,26 +11,44 @@ import (
 
 // Get Data-Item Data godoc
 // @Summary      Get data of a data-item
-// @Description  get only the data of a posted data-item
+// @Description  Get only the data of a posted data-item. It tries to automatically detect mime-type.
+// @Description  You can specify the response mime-type by either sending an mime-type query parameter or an accept header in the request.
+// @Description  Supported mime-type are listed here - https://github.com/gabriel-vasile/mimetype/blob/master/supported_mimes.md.
+// @Description  If all else fails defaults to `application/octet-stream`
 // @Tags         Upload
 // @Accept       json
-// @Produce      octet-stream
-// @Param        id   path    string    true      "ID of the Data-Item"
+// @Param        id           path      string    true      "ID of the data-Item"
+// @Param        mime-type    query     string    false     "Mime type of the response"
 // @Success      200  				{bytes}   data
 // @Failure      404,424,500  {object}  HTTPError
 // @Router       /tx/{id}/data [get]
 func (srv *Server) DataItemDataGet(ctx *gin.Context) {
 	id := ctx.Param("id")
+	contentType := ctx.Query("mime-type")
+	accept := ctx.Request.Header.Get("accept")
+	shouldDetect := false
+
+	if contentType == "" && accept == "" {
+		contentType = "application/octet-stream"
+		shouldDetect = true
+	} else if contentType == "" {
+		contentType = accept
+	}
+
+	mtype := mimetype.Lookup(contentType)
+	if mtype == nil {
+		contentType = "application/octet-stream"
+	}
 
 	o, err := srv.database.GetOrder(id)
 	if err != nil {
-		ctx.JSON(http.StatusNotFound, gin.H{"error": "data id does not exist"})
+		NewError(ctx, http.StatusNotFound, err)
 		return
 	}
 
 	res, err := srv.bundler.DataItemGet(o.URL, id)
 	if err != nil {
-		ctx.JSON(http.StatusFailedDependency, gin.H{"error": err})
+		NewError(ctx, http.StatusFailedDependency, err)
 		return
 	}
 	d, err := data_item.Decode(res)
@@ -38,13 +56,16 @@ func (srv *Server) DataItemDataGet(ctx *gin.Context) {
 		NewError(ctx, http.StatusInternalServerError, err)
 		return
 	}
-	log.Println(d.ID)
-
 	b, err := crypto.Base64Decode(d.Data)
 	if err != nil {
 		NewError(ctx, http.StatusInternalServerError, err)
 		return
 	}
 
-	ctx.Data(http.StatusOK, "application/octet-stream", b)
+	detect := mimetype.Detect(b)
+	if shouldDetect && detect != nil {
+		contentType = detect.String()
+	}
+
+	ctx.Data(http.StatusOK, contentType, b)
 }
