# internal/server/status.go
@@ -11,14 +11,6 @@ type StatusResponse struct {
 	Version string `json:"version" format:"string" example:"v0.0.1"`
 }
 
-// Status godoc
-// @Summary      Get status of the server
-// @Description  Get the current status of the server
-// @Tags         Server
-// @Accept       json
-// @Produce      json
-// @Success      200  {object} StatusResponse
-// @Router       / [get]
 func (s *Server) Status(c *gin.Context) {
 	c.JSON(http.StatusOK, StatusResponse{
 		Name:    "Transit",
